deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platfarm
  labels:
    app.kubernetes.io/part-of: platfarm
